--- a/src/fuse-subgraph/package.json
+++ b/src/fuse-subgraph/package.json
@@ -22,6 +22,12 @@
     "prepare:xdai": "echo fuse-subgraph not support on xdai",
 
     "deploy": "graph deploy --product hosted-service badger-finance/fuse-subgraph",
+    "deploy:fantom": "echo fuse-subgraph not support on fantom",
+    "deploy:avalanche": "echo fuse-subgraph not support on avalanche",
+    "deploy:matic": "echo fuse-subgraph not support on matic",
+    "deploy:arbitrum": "echo fuse-subgraph not support on arbitrum",
+    "deploy:bsc": "echo fuse-subgraph not support on bsc",
+    "deploy:xdai": "echo fuse-subgraph not support on xdai",
     "deploy-local": "graph deploy badger-finance/fuse-subgraph --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
   "devDependencies": {
