feat: fix registry handler to create datasource for v1.5 vaults

--- a/src/vaults/subgraph.template.yaml
+++ b/src/vaults/subgraph.template.yaml
@@ -391,6 +391,8 @@ templates:
           file: ./abis/BadgerSett.json
         - name: BadgerStrategy
           file: ./abis/BadgerStrategy.json
+        - name: BadgerStrategyV1_5
+          file: ./abis/BadgerStrategyV1_5.json
         - name: BadgerController
           file: ./abis/BadgerController.json
         - name: ERC20
