--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "mustache": "^4.2.0",
     "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.3",
     "typescript": "^4.4.3"
   }
 }
