--- a/src/badger-nfts/package.json
+++ b/src/badger-nfts/package.json
@@ -1,13 +1,12 @@
 {
   "name": "badger-nfts",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "create": "graph create badger-finance/badger-nfts --node https://api.thegraph.com/deploy/",
     "create-local": "graph create badger-finance/badger-nfts --node http://127.0.0.1:8020",
-
     "codegen": "graph codegen",
     "build": "graph build",
-
     "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
     "prepare:fantom": "echo badger-nfts not support on fantom",
     "prepare:avalanche": "echo badger-nfts not support on avalanche",
@@ -15,7 +14,6 @@
     "prepare:arbitrum": "echo badger-nfts not support on arbitrum",
     "prepare:bsc": "echo badger-nfts not support on bsc",
     "prepare:xdai": "echo badger-nfts not support on xdai",
-
     "deploy": "graph deploy --product hosted-service badger-finance/badger-nfts",
     "deploy-local": "graph deploy badger-finance/badger-nfts --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy:fantom": "echo badger-nfts not support on fantom",
