--- a/src/vaults/subgraph.template.yaml
+++ b/src/vaults/subgraph.template.yaml
@@ -179,6 +179,28 @@ dataSources:
           handler: handleSweep
       file: ./src/handlers/harvest-forwarder-handler.ts
   {{/forwarder}}
+  {{#bribeProcessor}}
+  - kind: ethereum
+    name: BribeProcessor
+    network: {{ chain }}
+    source:
+      address: "{{ address }}"
+      abi: VotiumBribeProcessor
+      startBlock: {{ startBlock }}
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - TreeDistribution
+      abis:
+        - name: VotiumBribeProcessor
+          file: ./abis/VotiumBribeProcessor.json
+      eventHandlers:
+        - event: TreeDistribution(indexed address,uint256,indexed uint256,uint256)
+          handler: handleTreeDistribution
+      file: ./src/handlers/bribe-processor-handler.ts
+  {{/bribeProcessor}}
   
 templates:
   - kind: ethereum/contract
