--- a/src/votium-bribes/package.json
+++ b/src/votium-bribes/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "votium-bribes-test",
-  "license": "UNLICENSED",
+  "name": "votium-bribes",
+  "license": "MIT",
   "scripts": {
+    "create": "graph create badger-finance/votium-bribes --node https://api.thegraph.com/deploy/",
+    "create-local": "graph create badger-finance/votium-bribes --node http://127.0.0.1:8020",
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ votium-bribes-test",
-    "create-local": "graph create --node http://localhost:8020/ votium-bribes-test",
-    "remove-local": "graph remove --node http://localhost:8020/ votium-bribes-test",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 votium-bribes-test"
+    "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:fantom": "echo votium-bribes not support on fantom",
+    "prepare:avalanche": "echo votium-bribes not support on avalanche",
+    "prepare:matic": "echo votium-bribes not support on matic",
+    "prepare:arbitrum": "echo votium-bribes not support on arbitrum",
+    "prepare:bsc": "echo votium-bribes not support on bsc",
+    "prepare:xdai": "echo votium-bribes not support on xdai",
+    "deploy": "graph deploy --product hosted-service badger-finance/votium-bribes",
+    "deploy-local": "graph deploy badger-finance/votium-bribes --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "deploy:fantom": "echo votium-bribes not support on fantom",
+    "deploy:avalanche": "echo votium-bribes not support on avalanche",
+    "deploy:matic": "echo votium-bribes not support on matic",
+    "deploy:arbitrum": "echo votium-bribes not support on arbitrum",
+    "deploy:bsc": "echo votium-bribes not support on bsc",
+    "deploy:xdai": "echo votium-bribes not support on xdai"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.30.4",
