--- a/src/aura-bribes/subgraph.template.yaml
+++ b/src/aura-bribes/subgraph.template.yaml
@@ -17,13 +17,13 @@ dataSources:
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
-        - Bribed
+        - DepositBribe
       abis:
         - name: AuraBribe
           file: ./abis/AuraBribe.json
       eventHandlers:
         - event: DepositBribe(indexed bytes32,indexed address,uint256,bytes32,bytes32,indexed address)
-          handler: handleBribed
+          handler: handleDepositBribe
       file: ./src/aura-bribe.ts
   {{/auraBribes}}
 
@@ -38,11 +38,11 @@ templates:
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
-        - Bribed
+        - DepositBribe
       abis:
         - name: AuraBribe
           file: ./abis/AuraBribe.json
       eventHandlers:
-        - event: Bribed(address,uint256,indexed bytes32,uint256)
-          handler: handleBribed
+        - event: DepositBribe(indexed bytes32,indexed address,uint256,bytes32,bytes32,indexed address)
+          handler: handleDepositBribe
       file: ./src/aura-bribe.ts
