--- a/src/vaults/package.json
+++ b/src/vaults/package.json
@@ -10,7 +10,7 @@
     "build": "graph build subgraph.yaml",
     "create-local": "graph create --node http://localhost:8020/ badger-finance/badger-dao-setts",
     "remove-local": "graph remove --node http://localhost:8020/ badger-finance/badger-dao-setts",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 badger-finance/setts",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 badger-finance/badger-dao-setts",
 
     "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
     "prepare:fantom": "mustache config/fantom.json subgraph.template.yaml > subgraph.yaml",
